src/objects/MPOT_Project_Connections__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connected_ProjectName__c</fullName>
        <label>Connected Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Project_Id__c</fullName>
        <label>Connected Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connected Project Name</label>
        <referenceTo>GLBL_Project__c</referenceTo>
        <relationshipLabel>Project Connections (Connected Project Name)</relationshipLabel>
        <relationshipName>Project_Connections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>GLBL_Project__c</referenceTo>
        <relationshipLabel>Project Connections</relationshipLabel>
        <relationshipName>Project_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Connections</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Project Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Connections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>